Fri Nov 30 17:51:02 2001  Ross Golder  <ross@golder.org>

	* configure.in: Removed gmodule stuff, and exported
	    GTHREAD_* even if empty.
	* src/Makefile.am: Made use of GTHREAD_*

Sat Nov 10 18:37:01 2001  Ross Golder  <ross@golder.org>

	* configure.in: Switched to using PKG_CHECK_MODULES to
	    pick up glib flags (now glib2 friendly).
	* Makefile.am: Added glib flags. Reinstated distribution of
	    gnet.spec file for 'rpm -t[ab] gnet-x.y.z.tar.gz'.
	* src/Makefile.am: Added glib flags.
	* src/gnet.h: Replaced depracated GUTILS_C_VAR definition
	* src/inetaddr.h: Commented out argument to #endif.
	* gnet-config.in: Removed unnecessary conditional. Ensured
	    glib flags were being presented in output.
	* tests/url_test.c: Added headers to get rid of compiler warnings.

Fri Nov  9 14:44:09 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check for lib socket (Needed in SunOS 5.8?)

Fri Nov  9 14:27:45 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check for the gthread module and set CFLAGS,
 	    LIBS, glib_cflags, and glib_libs as appropriate.

	* src/inetaddr.c (gnet_gethostbyname, gnet_gethostbyaddr):
	    Initialize gthreads if not initialized in Glib-Mutex
	    case.  This caused seg faults in some FreeBSDs.

	* gnet.m4 (AM_PATH_GNET): Remove modules.  gthread is
		not a gnet module.

Mon Oct 29 16:27:55 2001  David Helder  <dhelder@umich.edu>

	* src/unix.c: Unlink socket on delete, doc fixes
	* examples/echoserver-unix.c: Delete socket on SIGINT, SIGTERM

	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): Doc fix.

Thu Oct 25 10:48:51 2001  David Helder  <dhelder@umich.edu>

	* configure.in, Makefile.am: Include deb/rpm stuff

Wed Oct 24 17:35:51 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check if debian or RPM files are 
	   there before AC_OUTPUT.  This causes an autoconf
	   warning, but not a configure warning.
	* Makefile.am: Removed .spec and debian from dist.  If
	   you really need it, I can put it back.